[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ploxv1"
version = "2.0.0"
description = "Natural-language Linux & AWS CLI companion — Ollama, OpenRouter, Claude, NVIDIA NIM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PloxV1 Team"}
]
keywords = ["ai", "llm", "linux", "aws", "cli", "terminal", "devops", "nvidia-nim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[project.scripts]
ploxv1 = "ploxv1.cli:main"

[tool.setuptools.packages.find]
include = ["ploxv1*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]